feat: refresh token for /register
