# docs/swagger.yaml
@@ -110,20 +110,6 @@ definitions:
     - email
     - password
     type: object
-  request.Logout:
-    properties:
-      refresh_token:
-        type: string
-    required:
-    - refresh_token
-    type: object
-  request.Refresh:
-    properties:
-      refresh_token:
-        type: string
-    required:
-    - refresh_token
-    type: object
   request.Register:
     properties:
       email:
@@ -181,13 +167,10 @@ definitions:
     type: object
   response.Auth:
     properties:
-      access_token:
-        type: string
-      refresh_token:
+      token:
         type: string
     required:
-    - access_token
-    - refresh_token
+    - token
     type: object
   response.Message:
     properties:
@@ -236,76 +219,6 @@ paths:
           schema:
             $ref: '#/definitions/response.Message'
       summary: Login
-      tags:
-      - Auth
-  /logout:
-    post:
-      consumes:
-      - application/json
-      description: Logout user and revoke refresh tokens
-      operationId: logout
-      parameters:
-      - description: comment
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/request.Logout'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.Message'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.Message'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/response.Message'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.Message'
-      summary: Logout
-      tags:
-      - Auth
-  /refresh:
-    post:
-      consumes:
-      - application/json
-      description: Refresh access token using refresh token
-      operationId: refresh
-      parameters:
-      - description: comment
-        in: body
-        name: request
-        required: true
-        schema:
-          $ref: '#/definitions/request.Refresh'
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.Auth'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.Message'
-        "401":
-          description: Unauthorized
-          schema:
-            $ref: '#/definitions/response.Message'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.Message'
-      summary: RefreshToken
       tags:
       - Auth
   /register:
